# pyrauli

./: .buildinfo  .clang-format  .gitignore  CMakeLists.txt  README.md  api.html  genindex.html  getting_started.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.github/workflows/: benchmark.yml  ci.yml  doc.yml  pypi.yml
_sources/: index.rst.txt
_sources/guides/: circuit_guide.rst.txt  how_to_hamiltonian.rst.txt  how_to_qiskit.rst.txt  how_to_symbolic.rst.txt  observable_guide.rst.txt  qiskit_integration_guide.rst.txt
_sources/reference/: api.rst.txt
benchmarks/: benchmark_circuit.py  benchmark_observable.py  benchmark_qiskit.py  test_benchmark_circuit.py  test_benchmark_observable.py  test_benchmark_qaoa.py  test_benchmark_qiskit.py  test_benchmark_symbolic_qaoa.py  test_benchmark_time_evolution.py
dev/bench/: data.js
docs/: conf.py  getting_started.rst  index.rst
docs/explanation/: theory.rst
docs/guides/: circuit_guide.rst  how_to_circuit.rst  how_to_complexity.rst  how_to_noise.rst  how_to_observables.rst  how_to_performance.rst  how_to_qiskit.rst  observable_guide.rst  qiskit_integration_guide.rst
docs/tutorials/: getting_started.rst
examples/: qiskit_backend.py
explanation/: theory.html
guides/: circuit_guide.html  how_to_circuit.html  how_to_complexity.html  how_to_hamiltonian.html  how_to_noise.html  how_to_observables.html  how_to_performance.html  how_to_qiskit.html  how_to_symbolic.html  observable_guide.html  qiskit_integration_guide.html
reference/: api.html
src/pyrauli/: __init__.py  backend.py  converters.py  estimator.py
src/pyrauli/_core/: bindings.cpp
tests/: test_backend.py  test_circuit.py  test_circuit_qiskit.py  test_noise_model.py  test_observable.py  test_observable_qiskit.py  test_pauli.py  test_policies.py  test_pyrauli.py  test_symbolic.py  test_symbolic_circuit.py  test_symbolic_coefficient.py  test_symbolic_observable.py  test_truncator.py
tests/snippets/: test_basic_circuit.py  test_hamiltonian_guide.py  test_observable_evolution.py  test_performance_guide.py  test_qiskit_backend_usage.py  test_readme.py  test_symbolic_circuit_noise.py  test_symbolic_circuit_snippet.py  test_symbolic_coefficient_guide.py  test_symbolic_observable_guide.py  test_symbolic_sympy.py
tutorials/: getting_started.html
