
[build-system]
requires = ["scikit-build-core"]
build-backend = "scikit_build_core.build"

[project]
name = "pyrauli"
version = "0.3.1"
description = "A very fast and easy to use Quantum circuit simulator relying on Pauli propagation. Compatible with qiskit."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Physics",
]

dependencies = []

[project.urls]
Homepage = "https://github.com/zefresk/pyrauli"

[project.optional-dependencies]
qiskit = [
    "qiskit>=2.0.0"
]
test = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-benchmark",
    "numpy",
]

[tool.scikit-build.wheel]
packages = ["src/pyrauli"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = ""
testpaths = [
    "tests",
    # no benchmarks here
]
